Change: checkout page updated

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -16,7 +16,7 @@
                         <div class="row">
                             <div class="col-12 mb-3">
                                 <label for="invoice-street" class="form-label">Street</label>
-                                <input type="email" class="form-control" id="invoice-street">
+                                <input type="text" class="form-control" id="invoice-street">
                             </div>
                             <div class="col-md-6 mb-3">
                                 <label for="invoice-country" class="form-label">Country</label>
@@ -32,25 +32,22 @@
                         <h5 class="fw-normal mt-2 mb-3">Delivery method</h5>
                         <hr>
                         <div class="row">
-                            <div class="col-sm-12 col-md-6">
-                                <div id="dhl-card" class="card mb-4 active">
+                            <div class="col-md-12 col-lg-6">
+                                <div id="dhl-card" class="card mb-4">
                                     <div class="card-body" role="button">
-                                        <p class="m-0">
-                                            <input id="dhl-payment" class="form-check-input me-1" type="radio">
-                                            <label class="form-label fw-semibold" for="dhl-payment">DHL</label>
-                                            <p class="form-label text-body-tertiary m-0">Secure and swift payments for seamless shipping.
-                                            </p>
+                                        <input id="dhl-payment" class="form-check-input me-1" type="radio" name="delivery-method">
+                                        <label class="form-label fw-semibold" for="dhl-payment">DHL</label>
+                                        <p class="form-label text-body-tertiary m-0">Secure and swift payments for seamless shipping.
                                         </p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-12 col-md-6">
+                            <div class="col-md-12 col-lg-6">
                                 <div id="dtdc-card" class="card mb-4">
                                     <div class="card-body" role="button">
-                                        <p class="m-0">
-                                            <input id="dtdc-payment" class="form-check-input me-1" type="radio">
-                                            <label class="form-label fw-semibold" for="dtdc-payment">DTDC</label>
-                                            <p class="form-label text-body-tertiary m-0">Easy payment and convenient courier services.</p>
+                                        <input id="dtdc-payment" class="form-check-input me-1" type="radio" name="delivery-method">
+                                        <label class="form-label fw-semibold" for="dtdc-payment">DTDC</label>
+                                        <p class="form-label text-body-tertiary m-0">Easy payment and convenient courier services.
                                         </p>
                                     </div>
                                 </div>
@@ -60,97 +57,23 @@
                     <div class="payment-method mb-4">
                         <h5 class="fw-normal mb-3">Payment method</h5>
                         <hr>
-                        <div class="accordion accordion-flush" id="paymentAccordion">
-                            <div class="accordion-item">
-                                <h2 class="accordion-header">
-                                    <button class="accordion-button bg-transparent text-body collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                                    Card payment
-                                </button>
-                                </h2>
-                                <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#paymentAccordion">
-                                    <div class="accordion-body row">
-                                        <div class="col-md-6 mb-2">
-                                            <label for="inputEmail4" class="form-label">Name on card</label>
-                                            <input type="email" class="form-control" id="inputEmail4">
-                                        </div>
-                                        <div class="col-md-6 mb-2">
-                                            <label for="inputPassword4" class="form-label">Card number</label>
-                                            <input type="password" class="form-control" id="inputPassword4">
-                                        </div>
-                                        <div class="col-md-6 mb-2">
-                                            <label for="inputCity" class="form-label">Expiry Date</label>
-                                            <input type="date" class="form-control" id="inputCity">
-                                        </div>
-                                        <div class="col-md-3 mb-2">
-                                            <label for="inputCvcCvv" class="form-label">CVC/CVV</label>
-                                            <input type="text" class="form-control" id="inputCvcCvv">
-                                        </div>
-                                        <div class="col-md-3 mb-2">
-                                            <label for="inputZip" class="form-label">Zip code</label>
-                                            <input type="number" class="form-control" id="inputZip">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="accordion-item">
-                                <h2 class="accordion-header">
-                                    <button class="accordion-button bg-transparent text-body collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                                    Pay with Paypal
-                                </button>
-                                </h2>
-                                <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#paymentAccordion">
-                                    <div class="accordion-body">
-                                        <div class="row">
-                                            <div class="col">
-                                                <div class="form-check">
-                                                    <input name="pay-using-paypal" type="radio" id="payment-method-2" class="form-check-input">
-                                                    <label title="" for="payment-method-2" class="form-check-label">
-                                                    <span class="d-block h6 mt-1 mb-3">Pay with PayPal</span>
-                                                    <span class="text-muted text-sm">
-                                                        One morning,
-                                                        when Gregor Samsa woke from troubled dreams, he found himself transformed in
-                                                        his bed into a
-                                                        horrible vermin. He lay on his armour-like back, and if he lifted his head a
-                                                        little he could see
-                                                        his brown belly, slightly domed and divided by arches into stiff sections
-                                                    </span>
-                                                </label>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="accordion-item">
-                                <h2 class="accordion-header">
-                                    <button class="accordion-button bg-transparent text-body collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                                    Pay on Delivery
-                                </button>
-                                </h2>
-                                <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#paymentAccordion">
-                                    <div class="accordion-body">
-                                        <div class="row">
-                                            <div class="col">
-                                                <div class="form-check">
-                                                    <input name="pay-on-delivery" type="radio" id="payment-method-3" class="form-check-input">
-                                                    <label for="payment-method-3" class="form-check-label">
-                                                    <span class="d-block h6 mt-1 mb-3">Pay on Delivery</span>
-                                                    <span class="text-muted text-sm">
-                                                        One morning,
-                                                        when Gregor Samsa woke from troubled dreams, he found himself transformed in
-                                                        his bed into a
-                                                        horrible vermin. He lay on his armour-like back, and if he lifted his head a
-                                                        little he could see
-                                                        his brown belly, slightly domed and divided by arches into stiff sections
-                                                    </span>
-                                                </label>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                <input class="form-check-input me-1" type="radio" name="listGroupRadio" value="" id="cardRadio" checked>
+                                <label class="form-check-label stretched-link" for="cardRadio">Card payment</label>
+                                <p class="form-text ms-4 m-0">VISA, Mastercard and American Express</p>
+                            </li>
+                            <li class="list-group-item">
+                                <input class="form-check-input me-1" type="radio" name="listGroupRadio" value="" id="paypalRadio">
+                                <label class="form-check-label stretched-link" for="paypalRadio">PayPal</label>
+                                <p class="form-text ms-4 m-0">Pay using PayPal</p>
+                            </li>
+                            <li class="list-group-item">
+                                <input class="form-check-input me-1" type="radio" name="listGroupRadio" value="" id="podRadio">
+                                <label class="form-check-label stretched-link" for="podRadio">Pay on Delivery</label>
+                                <p class="form-text ms-4 m-0">Cash, UPI and Cards accepted.</p>
+                            </li>
+                        </ul>
                     </div>
                 </form>
                 <hr>
