--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -34,7 +34,7 @@
                         <div class="row">
                             <div class="col-md-12 col-lg-6">
                                 <div id="dhl-card" class="card mb-4">
-                                    <div class="card-body" role="button">
+                                    <div class="card-body">
                                         <input id="dhl-payment" class="form-check-input me-1" type="radio" name="delivery-method">
                                         <label class="form-label fw-semibold" for="dhl-payment">DHL</label>
                                         <p class="form-label text-body-tertiary m-0">Secure and swift payments for seamless shipping.
@@ -44,7 +44,7 @@
                             </div>
                             <div class="col-md-12 col-lg-6">
                                 <div id="dtdc-card" class="card mb-4">
-                                    <div class="card-body" role="button">
+                                    <div class="card-body">
                                         <input id="dtdc-payment" class="form-check-input me-1" type="radio" name="delivery-method">
                                         <label class="form-label fw-semibold" for="dtdc-payment">DTDC</label>
                                         <p class="form-label text-body-tertiary m-0">Easy payment and convenient courier services.
@@ -54,6 +54,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="payment-method mb-4">
                         <h5 class="fw-normal mb-3">Payment method</h5>
                         <hr>
