--- a/templates/orders.html
+++ b/templates/orders.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block body %}
 
 <div class="container my-5">
-    <label class="fs-5 mb-3"><a href="/" class="text-decoration-none text-body-tertiary">Home</a> - Orders</label>
+    <label class="fs-5 mb-3"><a href="/" class="text-decoration-none text-body-tertiary">Home</a> - <a href="/orders" class="text-decoration-none text-body">Orders</a></label>
     <h4 class="fw-semibold display-6">Your Orders</h4>
     <table class="table table-hover">
         <thead>
