--- a/templates/wishlist.html
+++ b/templates/wishlist.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block body %}
 
 <div class="container my-5">
-    <label class="fs-5 mb-3"><a href="/" class="text-decoration-none text-body-tertiary">Home</a> - Wishlist</label>
+    <label class="fs-5 mb-3"><a href="/" class="text-decoration-none text-body-tertiary">Home</a> - <a href="/wishlist" class="text-decoration-none text-body">Wishlist</a></label>
     <h4 class="fw-semibold display-6">Wishlist</h4>
     <div>
         <p class="lead text-muted">You have 6 items in your wishlist.</p>
