--- a/templates/cart.html
+++ b/templates/cart.html
@@ -80,11 +80,6 @@
                     {% endif %}
                 </div>
             </div>
-            <div class="d-flex justify-content-between flex-column flex-lg-row mb-5 mb-lg-0 mt-auto">
-                {% if cartItems|length > 0 %}
-                <a role="button" tabindex="0" href="/" class="btn btn-outline-primary rounded-0"><i class="bi bi-arrow-left me-2"></i>Continue Shopping</a>
-                <button role="button" tabindex="0" href="#" class="btn btn-primary btn-update-cart rounded-0"><i class="bi bi-arrow-repeat me-2"></i>Update cart</button> {% endif %}
-            </div>
         </div>
         {% if cartItems|length > 0 %}
         <div class="col-lg-4">
@@ -111,13 +106,19 @@
                             </tr>
                             <tr>
                                 <th class="pt-4 border-0">Total</th>
-                                <td class="pt-4 border-0 text-end h3 fw-normal">₹<label class="cart-total">{{cart_total + 10}}</label></td>
+                                <td class="pt-4 border-0 text-end h3 fw-normal text-nowrap">₹<label class="cart-total">{{cart_total + 10}}</label></td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
-                <div class="overflow-hidden p-0 card-footer">
-                    <div class="d-grid"><a role="button" tabindex="0" href="/checkout" class="py-3 btn btn-outline-primary border-0 rounded-top-0">Proceed to Checkout <i class="bi bi-arrow-right"></i></a></div>
+            </div>
+        </div>
+        <div class="col-lg-8">
+            <div class="d-flex justify-content-between">
+                <a role="button" tabindex="0" href="/" class="btn btn-outline-primary"><i class="bi bi-arrow-left me-2"></i>Continue Shopping</a>
+                <div>
+                    <button role="button" tabindex="0" href="#" class="btn btn-primary btn-update-cart"><i class="bi bi-arrow-repeat me-2"></i>Update cart</button>
+                    <a role="button" tabindex="0" href="/checkout" class="btn btn-primary">Checkout<i class="bi bi-arrow-right ms-1"></i></a>
                 </div>
             </div>
         </div>
