Minor change in view

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -78,7 +78,10 @@
                     </div>
                 </form>
                 <hr>
-                <a href="/checkout/review" class="btn btn-primary d-block" role="button">Review order<i class="bi bi-arrow-right ms-1"></i></a>
+                <div class="d-flex align-items-center justify-content-between">
+                    <a href="/cart" class="btn btn-primary" role="button"><i class="bi bi-arrow-left me-2"></i>Back to cart</a>
+                    <a href="/checkout/review" class="btn btn-primary" role="button">Review order<i class="bi bi-arrow-right ms-2"></i></a>
+                </div>
             </div>
         </div>
         <div class="col-lg-4">
@@ -106,7 +109,7 @@
                             </tr>
                             <tr>
                                 <th class="pt-4 border-0">Total</th>
-                                <td class="pt-4 border-0 text-end h3 fw-normal">₹<label class="cart-total">{{cart_total + 10}}</label></td>
+                                <td class="pt-4 border-0 text-end h3 fw-normal text-nowrap">₹<label class="cart-total">{{cart_total + 10}}</label></td>
                             </tr>
                         </tbody>
                     </table>
