--- a/templates/review.html
+++ b/templates/review.html
@@ -78,7 +78,7 @@
         <div class="col-lg-8">
             <div class="d-flex align-items-center justify-content-between">
                 <a href="/checkout" class="btn btn-primary" type="button"><i class="bi bi-arrow-left me-2"></i>Back to checkout</a>
-                <button class="btn btn-primary" type="button"><i class="bi bi-cart-check me-2"></i>Place order</button>
+                <a href="/checkout/confirmed" class="btn btn-primary" type="button"><i class="bi bi-cart-check me-2"></i>Place order</a>
             </div>
         </div>
     </div>
