change: new field added

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -18,13 +18,17 @@
                                 <label for="invoice-street" class="form-label">Street</label>
                                 <input type="text" class="form-control" id="invoice-street">
                             </div>
-                            <div class="col-md-6 mb-3">
+                            <div class="col-md-4 mb-3">
+                                <label for="invoice-city" class="form-label">City</label>
+                                <input type="text" class="form-control" id="invoice-city">
+                            </div>
+                            <div class="col-md-4 mb-3">
                                 <label for="invoice-country" class="form-label">Country</label>
                                 <input type="text" class="form-control" id="invoice-country">
                             </div>
-                            <div class="col-md-6 mb-3">
-                                <label for="invoice-city" class="form-label">City</label>
-                                <input type="text" class="form-control" id="invoice-city">
+                            <div class="col-md-4 mb-3">
+                                <label for="zip-code" class="form-label">Zip code</label>
+                                <input type="number" class="form-control" id="zip-code">
                             </div>
                         </div>
                     </div>
